frontend/err6_context.txt
C:\Users\ASUS\Documents\workspace\EXPERIMENTOS\saas experimental con ecosistema v5.0\frontend\temp.js:1796
                document.getElementById('edit-tx-Categorialue = t.Categoria || t.category || '';
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.17.1
